<!-- 
   Copyright 2023 Daniel Pereira Coelho
   
   This file is part of the Expenses Android Application.

   Expenses is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation in version 3.

   Expenses is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Expenses.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/MN.TextAppearance.Subtitle" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/hBar" />

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:text="@string/about_l1" />


        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_l9"
            android:layout_marginTop="10dp" />
		
		<TextView
		    android:id="@+id/textView8"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:text="@string/about_l6" />
		
		<LinearLayout
		    android:id="@+id/LinearLayout2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="10dp">
	        
		    <TextView
	            android:id="@+id/textView11"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/about_l7" />
		    
		    <TextView
	            android:id="@+id/textView12"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/nt_about_l3"
	            android:autoLink="web"
	            android:layout_marginLeft="5dp" />		    
		    
		</LinearLayout>
		
		
	    <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_l8"
            android:layout_marginTop="10dp" />
	    
	    <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nt_about_l4"
            android:autoLink="web" />		    
				
	    <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_l3"
            android:layout_marginTop="10dp" />
	    
	    <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nt_about_l2"
            android:autoLink="email" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/about_l4"
            android:textAppearance="@style/MN.TextAppearance.Subtitle" />
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/hBar" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/changes" />
        
    </LinearLayout>

</ScrollView>
