<!-- 
   Copyright 2023 Daniel Pereira Coelho
   
   This file is part of the Expenses Android Application.

   Expenses is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation in version 3.

   Expenses is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Expenses.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio1"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestats_l3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginRight="8dp"/>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestats_l1" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestats_l2" />
    </RadioGroup>

    <View style="@style/MN.HBarThin" />

    <LinearLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/timestats_l4"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <ImageButton
            android:id="@+id/imageButton1"
            style="@style/MN.Widget.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/gp_7" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:text="@string/nt_empty"/>

        <ImageButton
            android:id="@+id/imageButton2"
            style="@style/MN.Widget.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/gp_8" />

    </LinearLayout>

    <View style="@style/MN.HBarThin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/timestats_l5"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginRight="8dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestats_l6"
            android:id="@+id/checkBoxCumulative"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestats_l7"
            android:id="@+id/checkBoxBudget"/>

    </LinearLayout>

    <View style="@style/MN.HBarThin" />

    <FrameLayout
        android:id="@+id/FrameLayoutTimeChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </FrameLayout>

</LinearLayout>